--- a/.docker/oathkeeper/access-rules.yml
+++ b/.docker/oathkeeper/access-rules.yml
@@ -44,12 +44,13 @@
       - PUT
       - DELETE
   authenticators:
-    - handler: oauth2_introspection
-      config:
-        required_scope:
-          - dynamic-client:write
-        # target_audience:
-        #   - example_audience
+    - handler: noop
+    # - handler: oauth2_introspection
+    #   config:
+    #     required_scope:
+    #       - dynamic-client:write
+    #     # target_audience:
+    #     #   - example_audience
   authorizer:
     handler: allow
   mutators:
@@ -64,12 +65,13 @@
     methods:
       - POST
   authenticators:
-    - handler: oauth2_introspection
-      config:
-        required_scope:
-          - dynamic-client:write
-        # target_audience:
-        #   - example_audience
+    - handler: noop
+    # - handler: oauth2_introspection
+    #   config:
+    #     required_scope:
+    #       - dynamic-client:write
+    #     # target_audience:
+    #     #   - example_audience
   authorizer:
     handler: allow
   mutators:
