chore: add default scopes

--- a/.docker/hydra/hydra.yml
+++ b/.docker/hydra/hydra.yml
@@ -36,6 +36,8 @@ oidc:
   dynamic_client_registration:
     default_scope:
       - openid
+      - profile
+      - email
       - offline
       - offline_access
     enabled: true
