--- a/.docker/oathkeeper/access-rules.yml
+++ b/.docker/oathkeeper/access-rules.yml
@@ -33,6 +33,22 @@
   mutators:
     - handler: noop
 
+- id: "hydra-login-consent:public:homepage"
+  upstream:
+    preserve_host: true
+    url: "http://hydra-login-consent:8080"
+  match:
+    url: "<{https,http}>://testid.cerberauth.<{com,local}>/"
+    methods:
+      - GET
+      - POST
+  authenticators:
+    - handler: noop
+  authorizer:
+    handler: allow
+  mutators:
+    - handler: noop
+
 - id: "ory:hydra:dynamic_client"
   upstream:
     preserve_host: true
