chore: set dev mode for hydra

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ URLS_LOGIN=http://testid.cerberauth.local/login
 URLS_REGISTRATION=http://testid.cerberauth.local/registration
 URLS_CONSENT=http://testid.cerberauth.local/consent
 URLS_LOGOUT=http://testid.cerberauth.local/logout
+URLS_ERROR=http://testid.cerberauth.local/error
 
 # URLS_SELF_ADMIN=http://localhost:4445
 # URLS_LOGIN=http://localhost:8080/login
