--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,8 @@ URLS_LOGIN=https://testid.cerberauth.com/login
 URLS_REGISTRATION=https://testid.cerberauth.com/registration
 URLS_CONSENT=https://testid.cerberauth.com/consent
 URLS_LOGOUT=https://testid.cerberauth.com/logout
+URLS_ERROR=https://testid.cerberauth.com/error
+SERVE_COOKIES_SECURE=true
 
 OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=
 SECRETS_COOKIE=
