chore: add some env variables

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,14 @@
 # Hydra
 
+LOG_LEVEL=debug
+LOG_FORMAT=json_pretty
+LOG_LEAK_SENSITIVE_VALUES=true
+
+SERVE_COOKIES_SECURE=false
+SERVE_COOKIES_SAME_SITE_MODE=Lax
+
 URLS_SELF_ISSUER=http://testid.cerberauth.local
+URLS_SELF_PUBLIC=http://testid.cerberauth.local
 URLS_SELF_ADMIN=http://hydra-admin:4445
 URLS_LOGIN=http://testid.cerberauth.local/login
 URLS_REGISTRATION=http://testid.cerberauth.local/registration
