--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,12 @@ LOG_LEVEL=warn
 
 # Hydra
 
+SERVE_COOKIES_SECURE=true
+SERVE_COOKIES_SAME_SITE_MODE=Lax
+SERVE_PUBLIC_CORS_ALLOWED_ORIGINS=*
+
 URLS_SELF_ISSUER=https://testid.cerberauth.com
+URLS_SELF_PUBLIC=https://testid.cerberauth.com
 URLS_LOGIN=https://testid.cerberauth.com/login
 URLS_REGISTRATION=https://testid.cerberauth.com/registration
 URLS_CONSENT=https://testid.cerberauth.com/consent
