--- a/hydra-login-consent/.gitignore
+++ b/hydra-login-consent/.gitignore
@@ -14,4 +14,15 @@
 # Environment variables file
 .env
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 hydra-login-consent
