--- a/.docker/oathkeeper/access-rules.yml
+++ b/.docker/oathkeeper/access-rules.yml
@@ -64,7 +64,7 @@
     preserve_host: true
     url: "http://hydra-login-consent:8080"
   match:
-    url: "<{https,http}>://testid.cerberauth.<{com,local}>/<{login,consent,logout,error}>"
+    url: "<{https,http}>://testid.cerberauth.<{com,local}>/<{login,consent,logout,error,robots.txt,favicon.ico,css/**}>"
     methods:
       - GET
       - POST
