feat: add clients cleanup

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - .env
 
   hydra-admin:
-    command: serve admin -c /etc/config/hydra/hydra.yml --sqa-opt-out
+    command: serve admin -c /etc/config/hydra/hydra.yml --sqa-opt-out --dev
     ports:
       - 4445:4445
     env_file:
