--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,11 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./hydra-login-consent
+    strategy:
+      matrix:
+        working-directory:
+          - ./hydra-login-consent
+          - ./hydra-cleanup
 
     steps:
       - uses: actions/checkout@v4
@@ -26,5 +29,5 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Build
-        working-directory: ${{ env.working-directory }}
+        working-directory: ${{ matrix.working-directory }}
         run: go build -v ./...
